--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "passport-local-mongoose": "^7.1.2"
   },
   "devDependencies": {
+    "@nuxtjs/moment": "^1.6.1",
     "nodemon": "^2.0.19"
   }
 }
