--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.3",
+    "mongoose-delete": "^0.5.4",
     "mongoose-slug-generator": "^1.0.4",
     "morgan": "~1.9.1",
     "passport": "^0.6.0",
